<resources>
    <string name="app_name">AndroidTests</string>
    <string name="welcome_title">Welcome !</string>
    <string name="signIn_title">Sign in</string>
    <string name="email_title" translatable="false">Email</string>
    <string name="password_title">password</string>
    <string name="register_title">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="profile_menu_title">Profile</string>
    <string name="http_no_connection">no data : check your connection</string>
    <string name="request_error">An error occured during your request</string>
    <string name="technical_error">An unknow error happened : Try again</string>
    <string name="string_profil">profil</string>
    <string name="string_ranking">ranking</string>
    <string name="string_challenges">challenges</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings">Settings</string>
    <string name="completed_challenges">completed challenges</string>
    <string name="current_challenges">current challenges</string>
    <string name="language">Language</string>
    <string-array name="languages">
        <item>English</item>
        <item>French</item>
    </string-array>
    <string-array name="languagesInverted">
        <item>French</item>
        <item>English</item>
    </string-array>
    <string name="Logout">Logout</string>
    <string name="logoutMessage">Are you sure you want to logout ?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="upload_profil_picture">upload profil picture</string>
    <string name="upload_profil_picture_message">change you actual photo ?</string>
    <string name="update_success">user updated !</string>
    <string name="update_fail">update has failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="suggest_challenge">Suggest a challenge</string>
    <string name="in_progress">In progress</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="start">Start</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="Difficulty">Difficulty</string>
    <string name="lastName">lastname</string>
    <string name="firstName">firstname</string>
    <string name="confirmPassword">confirm</string>
    <string name="birthYear">birth year</string>
    <string name="validate">validate</string>
    <string name="back">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="your_friends">Your friends</string>
    <string name="add_friend">Add friend</string>
    <string name="friends">friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_id">Search by Id</string>
    <string name="add">Add</string>
    <string name="results">Results</string>
    <string name="add_user_confirmation">add the user</string>
    <string name="request_send_confirmation">Friendrequest send</string>
    <string name="request_not_send">Friendrequest could not have been send</string>
    <string name="already_friend">This user is already your friend</string>
    <string name="friend_requests">friend requests</string>
    <string name="friendship_created_message">You\'re now friends !</string>
    <string name="error_creating_friendship_message">problem creating the friendship</string>
    <string name="no_friend_requests">No friend requests</string>
    <string name="friend_request_notification">sent you a friend request</string>
    <string name="request_deleted_confirmation">friend request denied</string>
    <string name="request_not_deleted">problem : friend request not deleted</string>
    <string name="your_rank">your rank</string>
    <string name="your_username">your username</string>
    <string name="your_total_points">your points</string>
    <string name="userChallenge_updated_message">user\'s challenge created, resumed or pause</string>
    <string name="userChallenge_not_updated_message">problem with user\'s challenge update</string>
    <string name="email_not_valid">email adress introduced is not valid</string>
    <string name="formular_incomplete">all the fields must be completed</string>
    <string name="passwords_do_not_match">passwords do not match</string>
    <string name="user_created">user created !</string>
    <string name="user_not_found">can\'t find any user with this email and password</string>
    <string name="no_friends">no friends yet</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>