<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.friends.Friends">
    <ProgressBar
        android:id="@+id/rankingProgressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="2dp" />

    <ImageView
        android:id="@+id/errorImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/visibleLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rankingRecyclerView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:background="@drawable/border_search"
            app:layout_constraintBottom_toTopOf="@+id/userRankInfos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rankingTitle" />

        <LinearLayout
            android:id="@+id/userRankInfos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:text="@string/add_friend"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/yourRankInfos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/yourRankTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/your_rank"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/yourRankNameTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/your_username"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/yourPointsTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/your_total_points"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/yourRankInfos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="80dp"
            android:text="@string/add_friend"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/yourRankInputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/your_rank"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/yourRankNameInputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/your_username"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/yourPointsInputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/your_total_points"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/rankingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/string_ranking"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>